--- a/css/creative.css
+++ b/css/creative.css
@@ -123,13 +123,13 @@ aside {
 
 @media(min-width:768px) {
     .navbar-default {
-        border-color: rgba(255,255,255,.3);
-        background-color: transparent;
+	border-color: rgba(255,255,255,.6);
+	background-color: rgba(255,255,255,.6);
+	border: none;
     }
 
-    .navbar-default .navbar-header .navbar-brand {	
-    	color: rgba(240,95,64,1);
-    	/*text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;*/
+    .navbar-default .navbar-header .navbar-brand {
+	color: #94001C;    	/*text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;*/
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -140,8 +140,7 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-    	color: rgba(240,95,64,1);
-    	/*text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;*/
+	color: #94001C;    	/*text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;*/
     }
 
     .navbar-default .nav > li>a:hover,
@@ -278,7 +277,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    background: rgba(148,1,28,.6);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
